<resources>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">FinFamily</string>
    <string name="buttonLogin">Login</string>
    <string name="need_help_">"         <a href="http://clubedosgeeks.com.br/">Need help?</a>     "</string>
    <string name="title_activity_cadastro">Register</string>
    <string name="create_acco">Create Account</string>
    <string name="members">Members</string>
    <string name="title_activity_buttom_navigation" translatable="false">buttomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="api_here" translatable="false">API HERE</string>
    <string name="string_api_here" translatable="false" />
    <string name="name">Name</string>
    <string name="cpf">CPF</string>
    <string name="Date">Date of birth</string>
    <string name="Next">Next</string>
    <string name="Finish">Finish</string>
    <string name="country_prompt">Choose a category</string>
    <string name="CreateAccount">Create Account</string>
    <string name="PersonalInformation">Personal Information</string>
    <string name="emailforacess">Email for acess</string>
    <string name="Confirmpassword">Confirm password</string>
    <string name="Password">Password</string>
    <string name="Access_Information">Access_Information</string>
    <string name="Nickname">Nickname</string>
    <string name="Total_family">Total family</string>
    <string name="Accounts">Accounts</string>
    <string name="Total">Total</string>
    <string name="Expenditure_budget">Expenditure budget</string>
    <string name="My_Finances">My Finances</string>
    <string name="Login">Login</string>
    <string name="Leave_the_group">Leave the group</string>
    <string name="Earnings">Earnings</string>
    <string name="Expenses">Expenses</string>
    <string name="Extract">Extract</string>
    <string name="May">May</string>
    <string name="Group">Group</string>
    <string name="Join_Group">Join Group</string>
    <string name="New_Group">New Group</string>
    <string name="EnterGroupCode">#EnterGroupCode</string>
    <string name="New_entry">New entry</string>
    <string name="Insert_value">$ Insert value</string>
    <string name="Fixed">Fixed</string>
    <string name="New_expense">New expense</string>
    <string name="New_Invoice">New Invoice</string>
    <string name="Administrador">Administrator</string>
    <string name="Sair">Go out</string>
    <string name="New_password">New password</string>
    <string name="Confirm_new_password">Confirm new password</string>
    <string name="Edit_Image">Edit avatar</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="Add_Member">Add Member</string>
    <string name="Invite_someone">Invite someone</string>
    <string name="Send">Send</string>
    <string name="Name">Name</string>
    <string name="CreateYourCode">#CreateYourCode</string>
    <string name="upload_image">Choose avatar</string>
    <string name="sifrao">$</string>
    <string name="txt_contribution">FamContribution expenses</string>
    <string name="txt_entry">Entry</string>
    <string name="delete_put">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="txt_alter_release">" Change invoice"</string>
    <string name="view_more">More</string>
    <string-array name="meses_array">
        <item>@string/Janeiro</item>
        <item>@string/Fevereiro</item>
        <item>@string/Março</item>
        <item>@string/Abril</item>
        <item>@string/Maio</item>
        <item>@string/Junho</item>
        <item>@string/Julho</item>
        <item>@string/Agosto</item>
        <item>@string/Setembro</item>
        <item>@string/Outubro</item>
        <item>@string/Novembro</item>
        <item>@string/Dezembro</item>
    </string-array>
    <string-array name="entry">
        <item>Salary</item>
        <item>Loan</item>
        <item>Bonus</item>
        <item>Benefit</item>
        <item>Donation</item>
        <item>Credit</item>
    </string-array>
    <string-array name="expenses">
        <item>Rent</item>
        <item>Ligth</item>
        <item>Water</item>
        <item>Gas</item>
        <item>School supplies</item>
        <item>Locker room</item>
        <item>Cheers</item>
        <item>Supermarket</item>
        <item>The bakery</item>
        <item>School / University</item>
        <item>Home</item>
        <item>Payment booklet</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title" translatable="false">title</string>
    <string name="FaltaContribuir">"Lack Contribute "</string>
    <string name="FamWallet">FamWallet</string>
    <string name="Sifrao">$</string>
    <string name="Availabre">Availabre</string>
    <string name="finfamily">FinFamily</string>
    <string name="titleinicio">FinFamily</string>
    <string name="Janeiro">January</string>
    <string name="Fevereiro">February</string>
    <string name="Março">"March"</string>
    <string name="Abril">"April"</string>
    <string name="Maio">May</string>
    <string name="Junho">"June"</string>
    <string name="Julho">"July"</string>
    <string name="Agosto">"August"</string>
    <string name="Setembro">"September"</string>
    <string name="Outubro">"October"</string>
    <string name="Novembro">"November"</string>
    <string name="Dezembro">"December"</string>
    <string name="Insert_name">Insert name</string>
<string name="txt_contributors">Contributors</string>
    <string name="family">Family</string>
    <string name="spouse">Spouse</string>
    <string name="team">Team</string>
</resources>