<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo"
    tools:context=".Login">

    <TextView
        android:id="@+id/finfamily"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal|top"
        android:text="@string/finfamily"
        android:textAppearance="@style/finfamily" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        >

        <EditText
            android:id="@+id/inputemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputemail"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputpassword"
            android:baselineAligned="false"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/buttonlogin"
            android:background="@drawable/buttonlogininicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:text="@string/buttonLogin" />

        <TextView
            android:id="@+id/need_help_"
            android:gravity="right|top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_help_"
            android:textAppearance="@style/need_help_" />
    </LinearLayout>

</LinearLayout>