<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    tools:context=".Popups.PopDeletePut"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:elevation="20dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="1dp"/>


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_put"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/btnpop"
            android:backgroundTint="#F44336"
            android:layout_marginEnd="5dp"
            android:text="@string/no"
            app:backgroundTint="#F44336" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btnpop"
            android:backgroundTint="#65E674"
            android:text="@string/yes"
            app:backgroundTint="#65E674" />

    </LinearLayout>

</LinearLayout>