<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    tools:context=".popups.PopNewGroup"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:elevation="20dp"
    android:layout_gravity="center"

    >

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="1dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Add_Member"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/inputNameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Invite_someone" />

        <Button
            android:id="@+id/btnSendMember"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/fundo2"
            android:gravity="center"
            android:text="@string/Send" />

    </LinearLayout>



    <ImageView
        android:id="@+id/btnSaveMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_check_black_24dp" />


</LinearLayout>